--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <remove name="Server" />
+    <remove name="X-Powered-By" />
+    <add name="X-Frame-Options" value="DENY" />
+    <add
+      name="Strict-Transport-Security"
+      value="max-age=31536000; includeSubDomains; preload"
+    />
+    <add name="X-Content-Type-Options" value="nosniff" />
+    <add name="Referrer-Policy" value="same-origin" />
+    <add name="Permissions-Policy" value="()" />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./public/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
