--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <add name="Referrer-Policy" value="same-origin" />
     <add name="Permissions-Policy" value="()" />
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/favicon.png" />
+    <link rel="icon" type="image/png" href="./public/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
